[tool.poetry]
name = "search-engine"
version = "0.1.0"
description = ""
authors = ["Digi-Bo <fanch.daniel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "^0.2.8"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.5"
langchain-community = "^0.2.7"
pypdf = "^4.3.0"
beautifulsoup4 = "^4.12.3"
arxiv = "^2.1.3"
pymupdf = "^1.24.7"
wikipedia-api = "^0.6.0"
langchain-text-splitters = "^0.2.2"
langchain-openai = "^0.1.16"
chromadb = "^0.5.4"
sentence-transformers = "^3.0.1"
langchain-huggingface = "^0.0.3"
faiss-cpu = "^1.8.0.post1"
langchain-chroma = "^0.1.2"
duckdb = "^1.0.0"
pandas = "^2.2.2"
openai = "^1.35.14"
langchain-groq = "^0.1.6"
duckduckgo-search = "^6.2.0"
mysql-connector-python = "^9.0.0"
sqlalchemy = "^2.0.31"
validators = "0.28.1"
youtube-transcript-api = "^0.6.2"
pytube = "^15.0.0"
numexpr = "^2.10.1"
huggingface-hub = "^0.23.5"
unstructured = "^0.14.10"
streamlit = "^1.36.0"
wikipedia = "^1.4.0"
langchainhub = "^0.1.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
